--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "predev": "convex dev --until-success"
   },
   "dependencies": {
+    "@types/detect-port": "~1.3.5",
     "convex": "1.17.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "convex-helpers": "^0.1.67",
     "prettier": "3.2.5",
-    "@types/detect-port": "~1.3.5"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.0",
@@ -21,8 +22,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "npm-run-all": "^4.1.5",
     "typescript": "~5.0.3",
-    "vite": "5.2.14",
-    "npm-run-all": "^4.1.5"
+    "vite": "5.2.14"
   }
 }
